--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: #000;
+      background: radial-gradient(circle, #1a0000 0%, #000000 100%);
       color: #fff;
       display: flex;
       justify-content: center;
@@ -48,10 +48,18 @@
       transition: opacity .5s ease;
       z-index: 100;
       white-space: nowrap;
-      animation: pulseGlow 1.2s infinite ease-in-out;
+      animation: backgroundPulse 3s ease-in-out infinite;
       text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
       padding: 0 10px;
       text-align: center;
+    }
+    @keyframes backgroundPulse {
+      0%, 100% {
+        background: radial-gradient(circle, #1a0000 0%, #000000 100%);
+      }
+      50% {
+        background: radial-gradient(circle, #330000 0%, #000000 100%);
+      }
     }
     .hidden {
       opacity: 0;
@@ -190,21 +198,6 @@
         transform: translateX(-50%) translateY(0);
       }
     }
-    .intro-dot {
-      position: absolute;
-      font-size: 1.2rem;
-      color: red;
-      pointer-events: none;
-      animation: flashPentagram 0.6s ease-out forwards;
-      text-shadow: 0 0 4px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000;
-      z-index: 200;
-    }
-    @keyframes flashPentagram {
-      0% { opacity: 0; transform: scale(0.5) rotate(0deg); }
-      20% { opacity: 1; transform: scale(1.5) rotate(30deg); }
-      40% { transform: scale(1) rotate(-30deg); }
-      100% { opacity: 0; transform: scale(2) rotate(60deg); }
-    }
   </style>
 </head>
 <body>
@@ -265,19 +258,6 @@
         video.play().catch(() => {});
       }
     });
-
-    setInterval(() => {
-      if (introScreen.classList.contains('hidden')) return;
-      for (let i = 0; i < 6; i++) {
-        const dot = document.createElement('div');
-        dot.className = 'intro-dot';
-        dot.textContent = '⛧';
-        dot.style.left = Math.random() * window.innerWidth + 'px';
-        dot.style.top = Math.random() * window.innerHeight + 'px';
-        introScreen.appendChild(dot);
-        setTimeout(() => dot.remove(), 600);
-      }
-    }, 150);
 
     function animateLoop(timestamp) {
       if (titleChanged) {
