--- a/index.html
+++ b/index.html
@@ -17,12 +17,24 @@
     body {
       margin: 0;
       padding: 0;
-      background-color: #0a0a0a;
+      background: radial-gradient(circle at center, #1a0000 0%, #000000 100%);
+      background-size: 200% 200%;
+      animation: backgroundPulse 8s ease-in-out infinite;
       color: #fff;
       font-family: Inter, sans-serif;
       height: 100vh;
       overflow: hidden;
     }
+    @keyframes backgroundPulse {
+      0%, 100% {
+        background-position: center;
+        background: radial-gradient(circle at center, #1a0000 0%, #000000 100%);
+      }
+      50% {
+        background: radial-gradient(circle at center, #330000 0%, #000000 100%);
+      }
+    }
+
     #background-video {
       position: fixed;
       top: 0;
@@ -33,13 +45,14 @@
       z-index: -1;
       will-change: transform, opacity;
     }
+
     .intro-screen {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle, #1a0000 0%, #000000 100%);
+      background: transparent;
       color: #fff;
       display: flex;
       justify-content: center;
@@ -48,23 +61,17 @@
       transition: opacity .5s ease;
       z-index: 100;
       white-space: nowrap;
-      animation: backgroundPulse 3s ease-in-out infinite;
+      animation: pulseGlow 1.2s infinite ease-in-out;
       text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
       padding: 0 10px;
       text-align: center;
     }
-    @keyframes backgroundPulse {
-      0%, 100% {
-        background: radial-gradient(circle, #1a0000 0%, #000000 100%);
-      }
-      50% {
-        background: radial-gradient(circle, #330000 0%, #000000 100%);
-      }
-    }
+
     .hidden {
       opacity: 0;
       pointer-events: none;
     }
+
     .container {
       position: absolute;
       top: 50%;
@@ -77,15 +84,37 @@
       align-items: center;
       justify-content: center;
     }
+
     .pfp {
       width: 100px;
       height: 100px;
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000;
-      animation: pulseGlow 1.2s infinite ease-in-out;
+      position: relative;
+      z-index: 1;
+      box-shadow:
+        0 0 15px rgba(255, 0, 0, 0.6),
+        0 0 30px rgba(255, 0, 0, 0.4),
+        0 0 45px rgba(255, 0, 0, 0.3);
+      animation: pfpPulse 3s ease-in-out infinite;
     }
+
+    @keyframes pfpPulse {
+      0%, 100% {
+        box-shadow:
+          0 0 15px rgba(255, 0, 0, 0.6),
+          0 0 30px rgba(255, 0, 0, 0.4),
+          0 0 45px rgba(255, 0, 0, 0.3);
+      }
+      50% {
+        box-shadow:
+          0 0 30px rgba(255, 0, 0, 0.7),
+          0 0 60px rgba(255, 0, 0, 0.5),
+          0 0 90px rgba(255, 0, 0, 0.4);
+      }
+    }
+
     .title {
       font-size: 2.2rem;
       text-transform: lowercase;
@@ -96,9 +125,11 @@
       animation: pulseGlow 1.2s infinite ease-in-out;
       text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
     }
+
     .glitch {
       animation: glitch-out 0.4s ease-in-out infinite;
     }
+
     @keyframes glitch-out {
       0% { transform: scale(1) skewX(0deg); opacity: 1; }
       10% { transform: scale(1.1) skewX(10deg); opacity: 0.4; }
@@ -108,6 +139,7 @@
       50% { transform: scale(1.05) skewX(20deg); opacity: 0.4; }
       100% { transform: scale(1) skewX(0deg); opacity: 1; }
     }
+
     @keyframes pulseGlow {
       0%, 100% {
         text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
@@ -116,6 +148,7 @@
         text-shadow: 0 0 16px #ff0000, 0 0 32px #ff0000, 0 0 56px #ff0000, 0 0 100px #ff0000;
       }
     }
+
     .discord-wrapper {
       position: relative;
       display: flex;
@@ -123,6 +156,7 @@
       justify-content: center;
       margin-top: 30px;
     }
+
     .discord-tooltip, .x-tooltip {
       position: absolute;
       bottom: 35px;
@@ -139,10 +173,12 @@
       transform: translateX(-50%);
       box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
     }
+
     .discord-wrapper a:hover + .discord-tooltip,
     .x-logo:hover + .x-tooltip {
       opacity: 1;
     }
+
     .discord-logo, .x-logo {
       display: inline-block;
       width: 30px;
@@ -156,16 +192,20 @@
       filter: drop-shadow(0 0 3px #ff0000) drop-shadow(0 0 6px #ff0000);
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
+
     .discord-logo {
       background-image: url('https://github.com/jujuexe/fr/blob/main/image.png?raw=true');
     }
+
     .x-logo {
       background-image: url('https://github.com/jujuexe/Juju-wtf/blob/main/whitex.png?raw=true');
     }
+
     .discord-logo:hover, .x-logo:hover {
       transform: scale(1.05);
       filter: drop-shadow(0 0 5px #ff0000) drop-shadow(0 0 12px #ff0000);
     }
+
     #audio-controls {
       position: absolute;
       bottom: 20px;
@@ -175,14 +215,16 @@
       padding: 10px 20px;
       border-radius: 10px;
       text-align: center;
-      opacity: 0;
-      animation: fadeIn 1s ease-out forwards;
       z-index: 10;
+      opacity: 1;
+      animation: fadeIn 1s ease-out forwards;
     }
+
     #song-title {
       animation: pulseGlow 1.2s infinite ease-in-out;
       text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
     }
+
     #pause-button {
       background: none;
       border: none;
@@ -192,6 +234,7 @@
       text-transform: lowercase;
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
+
     @keyframes fadeIn {
       to {
         opacity: 1;
@@ -231,14 +274,12 @@
     const messages = ["ジュジュ", "JuJu.wtf"];
     let lastTitleUpdate = 0;
     let lastGlitchUpdate = 0;
-    let titleChanged = false;
 
     introScreen.addEventListener('click', function () {
       this.classList.add('hidden');
       video.play().catch(error => console.error('Video playback failed:', error));
       lastTitleUpdate = performance.now();
       lastGlitchUpdate = performance.now();
-      titleChanged = true;
       requestAnimationFrame(animateLoop);
     });
 
@@ -260,23 +301,22 @@
     });
 
     function animateLoop(timestamp) {
-      if (titleChanged) {
-        if (timestamp - lastTitleUpdate > 200) {
-          document.title = titleText.slice(titleIndex) + titleText.slice(0, titleIndex);
-          titleIndex = (titleIndex + 1) % titleText.length;
-          lastTitleUpdate = timestamp;
-        }
-
-        if (timestamp - lastGlitchUpdate > 4000) {
-          titleElement.classList.add('glitch');
-          setTimeout(() => {
-            titleElement.textContent = messages[msgIndex];
-            titleElement.classList.remove('glitch');
-            msgIndex = (msgIndex + 1) % messages.length;
-          }, 200);
-          lastGlitchUpdate = timestamp;
-        }
+      if (timestamp - lastTitleUpdate > 200) {
+        document.title = titleText.slice(titleIndex) + titleText.slice(0, titleIndex);
+        titleIndex = (titleIndex + 1) % titleText.length;
+        lastTitleUpdate = timestamp;
       }
+
+      if (timestamp - lastGlitchUpdate > 4000) {
+        titleElement.classList.add('glitch');
+        setTimeout(() => {
+          titleElement.textContent = messages[msgIndex];
+          titleElement.classList.remove('glitch');
+          msgIndex = (msgIndex + 1) % messages.length;
+        }, 200);
+        lastGlitchUpdate = timestamp;
+      }
+
       requestAnimationFrame(animateLoop);
     }
   </script>
