--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
       background: radial-gradient(circle at center, #1a0000 0%, #000000 100%);
       background-size: 200% 200%;
       animation: backgroundPulse 8s ease-in-out infinite;
-      color: #fff;
       font-family: Inter, sans-serif;
-      height: 100vh;
       overflow: hidden;
+      color: #fff;
     }
+
     @keyframes backgroundPulse {
       0%, 100% {
-        background-position: center;
         background: radial-gradient(circle at center, #1a0000 0%, #000000 100%);
       }
       50% {
@@ -43,7 +42,6 @@
       height: 100vh;
       object-fit: cover;
       z-index: -1;
-      will-change: transform, opacity;
     }
 
     .intro-screen {
@@ -58,13 +56,12 @@
       justify-content: center;
       align-items: center;
       font-size: 2rem;
-      transition: opacity .5s ease;
       z-index: 100;
       white-space: nowrap;
-      animation: pulseGlow 1.2s infinite ease-in-out;
       text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
-      padding: 0 10px;
-      text-align: center;
+      animation: pulseGlow 1.2s infinite ease-in-out;
+      transition: opacity 0.5s ease;
+      cursor: pointer;
     }
 
     .hidden {
@@ -79,10 +76,14 @@
       transform: translate(-50%, -50%);
       text-align: center;
       z-index: 10;
-      display: flex;
+      display: none; /* hidden initially */
       flex-direction: column;
       align-items: center;
       justify-content: center;
+    }
+
+    .container.visible {
+      display: flex;
     }
 
     .pfp {
@@ -91,13 +92,11 @@
       border-radius: 50%;
       object-fit: cover;
       margin-bottom: 20px;
-      position: relative;
-      z-index: 1;
+      animation: pfpPulse 3s ease-in-out infinite;
       box-shadow:
         0 0 15px rgba(255, 0, 0, 0.6),
         0 0 30px rgba(255, 0, 0, 0.4),
         0 0 45px rgba(255, 0, 0, 0.3);
-      animation: pfpPulse 3s ease-in-out infinite;
     }
 
     @keyframes pfpPulse {
@@ -118,26 +117,8 @@
     .title {
       font-size: 2.2rem;
       text-transform: lowercase;
-      letter-spacing: .1rem;
-      height: 2.6rem;
-      width: 100%;
-      position: relative;
       animation: pulseGlow 1.2s infinite ease-in-out;
       text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
-    }
-
-    .glitch {
-      animation: glitch-out 0.4s ease-in-out infinite;
-    }
-
-    @keyframes glitch-out {
-      0% { transform: scale(1) skewX(0deg); opacity: 1; }
-      10% { transform: scale(1.1) skewX(10deg); opacity: 0.4; }
-      20% { transform: scale(1) skewX(-5deg); opacity: 1; }
-      30% { transform: scale(1.1) skewX(15deg); opacity: 0.6; }
-      40% { transform: scale(1) skewX(-10deg); opacity: 1; }
-      50% { transform: scale(1.05) skewX(20deg); opacity: 0.4; }
-      100% { transform: scale(1) skewX(0deg); opacity: 1; }
     }
 
     @keyframes pulseGlow {
@@ -150,33 +131,10 @@
     }
 
     .discord-wrapper {
-      position: relative;
       display: flex;
       gap: 15px;
       justify-content: center;
       margin-top: 30px;
-    }
-
-    .discord-tooltip, .x-tooltip {
-      position: absolute;
-      bottom: 35px;
-      background: #ff0000;
-      color: #fff;
-      padding: 4px 8px;
-      border-radius: 6px;
-      white-space: nowrap;
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.3s ease;
-      font-size: 0.7rem;
-      left: 50%;
-      transform: translateX(-50%);
-      box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
-    }
-
-    .discord-wrapper a:hover + .discord-tooltip,
-    .x-logo:hover + .x-tooltip {
-      opacity: 1;
     }
 
     .discord-logo, .x-logo {
@@ -187,8 +145,6 @@
       background-repeat: no-repeat;
       background-position: center;
       text-indent: -9999px;
-      overflow: hidden;
-      transition: transform 0.3s ease;
       filter: drop-shadow(0 0 3px #ff0000) drop-shadow(0 0 6px #ff0000);
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
@@ -199,11 +155,6 @@
 
     .x-logo {
       background-image: url('https://github.com/jujuexe/Juju-wtf/blob/main/whitex.png?raw=true');
-    }
-
-    .discord-logo:hover, .x-logo:hover {
-      transform: scale(1.05);
-      filter: drop-shadow(0 0 5px #ff0000) drop-shadow(0 0 12px #ff0000);
     }
 
     #audio-controls {
@@ -217,12 +168,10 @@
       text-align: center;
       z-index: 10;
       opacity: 1;
-      animation: fadeIn 1s ease-out forwards;
     }
 
     #song-title {
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px #ff0000, 0 0 24px #ff0000, 0 0 48px #ff0000, 0 0 80px #ff0000;
     }
 
     #pause-button {
@@ -234,39 +183,36 @@
       text-transform: lowercase;
       animation: pulseGlow 1.2s infinite ease-in-out;
     }
-
-    @keyframes fadeIn {
-      to {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-      }
-    }
   </style>
 </head>
 <body>
   <div class="intro-screen" id="intro-screen">click ⛧ anywhere</div>
+
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
     <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/OsamaSon%20-%20Ref%20%5BOfficial%20Music%20Video%5D.mp4" type="video/mp4">
   </video>
-  <div class="container">
+
+  <div class="container" id="main-content">
     <img src="https://github.com/jujuexe/Juju-wtf/blob/main/meondcrn.png?raw=true" alt="pfp" class="pfp">
     <div class="title" id="title">JuJu.wtf</div>
     <div class="discord-wrapper">
-      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" target="_blank" rel="noopener noreferrer">discord</a>
-      <div class="discord-tooltip">Invite to JuJu Fanclub</div>
-      <a href="https://x.com/jujuwtfz" class="x-logo" target="_blank" rel="noopener noreferrer">x</a>
-      <div class="x-tooltip">Follow @jujuwtfz on X</div>
+      <a href="https://discord.gg/UfVueQFRcD" class="discord-logo" target="_blank">discord</a>
+      <a href="https://x.com/jujuwtfz" class="x-logo" target="_blank">x</a>
     </div>
   </div>
+
   <div id="audio-controls">
     <div id="song-title">Now Playing: Ref</div>
     <button id="pause-button">Pause</button>
   </div>
+
   <script>
     const introScreen = document.getElementById('intro-screen');
     const video = document.getElementById('background-video');
+    const mainContent = document.getElementById('main-content');
     const pauseButton = document.getElementById('pause-button');
     const titleElement = document.getElementById('title');
+
     let isPaused = false;
     let titleIndex = 0;
     let msgIndex = 0;
@@ -277,6 +223,7 @@
 
     introScreen.addEventListener('click', function () {
       this.classList.add('hidden');
+      mainContent.classList.add('visible');
       video.play().catch(error => console.error('Video playback failed:', error));
       lastTitleUpdate = performance.now();
       lastGlitchUpdate = performance.now();
