--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <div class="intro-screen" id="intro-screen">click ⛧ anywhere</div>
 
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/OsamaSon%20-%20Ref%20%5BOfficial%20Music%20Video%5D.mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/OsamaSon%20-%20Ref%20%5BOfficial%20Music%20Video%5D%20-%20Trim.mp4" type="video/mp4">
   </video>
 
   <div class="container" id="main-content">
