--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <body>
   <div class="intro-screen" id="intro-screen">click ⛧ anywhere</div>
   <video id="background-video" playsinline webkit-playsinline loop preload="metadata">
-    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Ken%20Carson%20-%20LiveLeak%20(Audio)%20-%20Trim.mp4" type="video/mp4">
+    <source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/OsamaSon%20-%20Ref%20%5BOfficial%20Music%20Video%5D%20-%20Trim.mp4" type="video/mp4">
   </video>
   <div class="container">
     <img src="https://github.com/jujuexe/Juju-wtf/blob/main/meondcrn.png?raw=true" alt="pfp" class="pfp">
@@ -223,7 +223,7 @@
     </div>
   </div>
   <div id="audio-controls">
-    <div id="song-title">Now Playing: LiveLeak</div>
+    <div id="song-title">Now Playing: Ref</div>
     <button id="pause-button">Pause</button>
   </div>
   <script>
