--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: #000;
+      background: rgba(0, 0, 0, 0.9); /* Darken the background */
       color: #fff;
       display: flex;
       justify-content: center;
@@ -52,6 +52,16 @@
       text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
       padding: 0 10px;
       text-align: center;
+    }
+    .intro-screen::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 0, 0, 0.2); /* Dim red overlay */
+      z-index: -1;
     }
     .hidden {
       opacity: 0;
@@ -190,21 +200,6 @@
         transform: translateX(-50%) translateY(0);
       }
     }
-    .intro-dot {
-      position: absolute;
-      font-size: 1.2rem;
-      color: red;
-      pointer-events: none;
-      animation: flashPentagram 0.6s ease-out forwards;
-      text-shadow: 0 0 4px #ff0000, 0 0 10px #ff0000, 0 0 20px #ff0000;
-      z-index: 200;
-    }
-    @keyframes flashPentagram {
-      0% { opacity: 0; transform: scale(0.5) rotate(0deg); }
-      20% { opacity: 1; transform: scale(1.5) rotate(30deg); }
-      40% { transform: scale(1) rotate(-30deg); }
-      100% { opacity: 0; transform: scale(2) rotate(60deg); }
-    }
   </style>
 </head>
 <body>
@@ -265,19 +260,6 @@
         video.play().catch(() => {});
       }
     });
-
-    setInterval(() => {
-      if (introScreen.classList.contains('hidden')) return;
-      for (let i = 0; i < 6; i++) {
-        const dot = document.createElement('div');
-        dot.className = 'intro-dot';
-        dot.textContent = '⛧';
-        dot.style.left = Math.random() * window.innerWidth + 'px';
-        dot.style.top = Math.random() * window.innerHeight + 'px';
-        introScreen.appendChild(dot);
-        setTimeout(() => dot.remove(), 600);
-      }
-    }, 150);
 
     function animateLoop(timestamp) {
       if (titleChanged) {
