--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      z-index: -1;
+      z-index: -2;
       will-change: transform, opacity;
     }
     .intro-screen {
@@ -39,7 +39,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9); /* Darken the background */
+      background: rgba(0, 0, 0, 0.9); /* Darker background */
       color: #fff;
       display: flex;
       justify-content: center;
@@ -49,9 +49,10 @@
       z-index: 100;
       white-space: nowrap;
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
+      text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000, 0 0 50px #ff0000;
       padding: 0 10px;
       text-align: center;
+      opacity: 0.95; /* Dimmer intro screen */
     }
     .intro-screen::before {
       content: '';
