--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       width: 100vw;
       height: 100vh;
       object-fit: cover;
-      z-index: -2;
+      z-index: -1;
       will-change: transform, opacity;
     }
     .intro-screen {
@@ -39,20 +39,19 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.9); /* Darker background */
+      background: rgba(0, 0, 0, 0.95);
       color: #fff;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 2rem;
       transition: opacity .5s ease;
-      z-index: 100;
+      z-index: 200;
       white-space: nowrap;
       animation: pulseGlow 1.2s infinite ease-in-out;
-      text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000, 0 0 50px #ff0000;
+      text-shadow: 0 0 12px #ff0000, 0 0 25px #ff0000;
       padding: 0 10px;
       text-align: center;
-      opacity: 0.95; /* Dimmer intro screen */
     }
     .intro-screen::before {
       content: '';
@@ -61,7 +60,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 0, 0, 0.2); /* Dim red overlay */
+      background-color: rgba(255, 0, 0, 0.2);
       z-index: -1;
     }
     .hidden {
@@ -238,6 +237,7 @@
 
     introScreen.addEventListener('click', function () {
       this.classList.add('hidden');
+      this.style.opacity = '0';
       video.play().catch(error => console.error('Video playback failed:', error));
       lastTitleUpdate = performance.now();
       lastGlitchUpdate = performance.now();
