--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true" type="image/png">
+  <link rel="icon" href="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp" type="image/webp">
   <meta property="og:url" content="https://JuJu.wtf/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JuJu">
   <meta property="og:description" content="made by @JuJu.wtf">
-  <meta property="og:image" content="https://github.com/jujuexe/fr/blob/main/anarchy.png?raw=true">
+  <meta property="og:image" content="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/85758dbf3bbbcfed7a542c1173164873.webp">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#0a0a0a">
